deployment/scaleway-dev/kubernetes/packer/filesystem/bootstrap/kubernetes/setup-web/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: setup-web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: setup-web
  template:
    metadata:
      labels:
        app: setup-web
    spec:
      containers:
        - name: setup-web
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: setup-web-html
