deployment/scaleway-dev/kubernetes/packer/filesystem/bootstrap/kubernetes/setup-web/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: setup-web
spec:
  ports:
    - port: 80
  selector:
    app: setup-web
