deployment/scaleway-dev/kubernetes/packer/filesystem/bootstrap/kubernetes/setup-web/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: setup-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: setup.dev.vjpatel.me
    http:
      paths:
      - path: /
        backend:
          serviceName: setup-web
          servicePort: 80
